--- a/services/journey-map-api/docker-compose.yml
+++ b/services/journey-map-api/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.1"
 services:
-  # api:
-  #   build: .
-  #   container_name: api
-  #   ports:
-  #     - 8080:8080
-  #   volumes:
-  #     - .:/app
+  api:
+    build: .
+    container_name: api
+    ports:
+      - 8080:8080
+    volumes:
+      - .:/app
 
   database:
     image: postgres:14-alpine
