--- a/services/journey-map-api/src/main/resources/application.properties
+++ b/services/journey-map-api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=journey-map-api
+spring.datasource.url=jdbc:postgresql://localhost:5432/journey_map
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
