--- a/services/journey-map-api/docker-compose.yml
+++ b/services/journey-map-api/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: api
     ports:
       - 8080:8080
-    volumes:
-      - .:/app
+    # volumes:
+    #   - .:/app
 
   database:
     image: postgres:14-alpine
