--- a/services/journey-map-api/src/main/resources/application.properties
+++ b/services/journey-map-api/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+logging.level.org.springframework.jdbc=DEBUG
