--- a/services/journey-map-api/pom.xml
+++ b/services/journey-map-api/pom.xml
@@ -15,6 +15,8 @@
 	<description>Api service for Journey Map</description>
 	<properties>
 		<java.version>21</java.version>
+		<spring-security.version>6.3.1</spring-security.version>
+		<spring.version>6.1.9</spring.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -59,6 +61,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>6.3.1</version> 
+		</dependency>
+		<dependency>
+		<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
