--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=journey-map-api
-spring.datasource.url=jdbc:postgresql://database:5432/journey_map
+spring.datasource.url=jdbc:postgresql://localhost:5432/journey_map
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
