--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -35,7 +35,7 @@ jobs:
     name: Build and Push Server Docker Image
     runs-on: ubuntu-latest
     needs: [check_folder_api_changed]
-    if: needs.check_folder_nginx_changed.outputs.is_changed == 'true'
+    if: needs.check_folder_api_changed.outputs.is_changed == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -46,10 +46,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build Nginx Docker image
+      - name: Build Api Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.DOCKERHUB_REPOSITORY}}-api:latest ./api
 
-      - name: Push Nginx Docker image to Docker Hub
+      - name: Push Api Docker image to Docker Hub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.DOCKERHUB_REPOSITORY}}-api:latest
 
   pull_and_run_on_droplet:
@@ -61,6 +61,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Add application properties
+        run: |
+          echo "${{ secrets.API_APPLICATION_PROPERTIES }}" > api/src/main/resources/application.properties
 
       - name: Install SSH key
         run: |
