--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -8,3 +8,18 @@ server {
         try_files $uri /index.html;
     }
 }
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name ${SERVER_DOMAIN};
+
+    location /api/ {
+        proxy_pass http://api:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+}
