--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -46,6 +46,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: Add application properties
+        run: |
+          cd api
+          echo "${{ secrets.API_APPLICATION_PROPERTIES }}"" > src/main/resources/application.properties
+
       - name: Build Api Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.DOCKERHUB_REPOSITORY}}-api:latest ./api
 
@@ -62,11 +67,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Add application properties
-        run: |
-          cd api
-          echo "${{ secrets.API_APPLICATION_PROPERTIES }}" > src/main/resources/application.properties
-          
       - name: Install SSH key
         run: |
           mkdir -p ~/.ssh/
