--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -50,6 +50,7 @@ jobs:
         run: |
           ls -a
           echo "${{ secrets.API_APPLICATION_PROPERTIES }}" > api/src/main/resources/application.properties
+          cat api/src/main/resources/application.properties
 
       - name: Build Api Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.DOCKERHUB_REPOSITORY}}-api:latest ./api
