--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -47,7 +47,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Add application properties
-        run: echo ${{ secrets.API_APPLICATION_PROPERTIES }} > api/src/main/resources/application.properties
+        run: cd api/src/main/resources
+          ls -la
+          echo "${{ secrets.API_APPLICATION_PROPERTIES }}"" > application.properties
 
       - name: Build Api Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.DOCKERHUB_REPOSITORY}}-api:latest ./api
