--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=journey-map-api
-spring.datasource.url=jdbc:postgresql://localhost:5432/journey_map
+spring.datasource.url=jdbc:postgresql://database:5432/journey_map
 spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.password=GJztpPT1Nl9V1P8r85KSl0J1CYi8
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 
