--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Add application properties
         run: cd api/src/main/resources
           ls -la
-          echo "${{ secrets.API_APPLICATION_PROPERTIES }}"" > application.properties
+          echo "${{ secrets.API_APPLICATION_PROPERTIES }}" > application.properties
 
       - name: Build Api Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.DOCKERHUB_REPOSITORY}}-api:latest ./api
