--- a/api/pom.xml
+++ b/api/pom.xml
@@ -67,8 +67,13 @@
 			<version>6.3.1</version> 
 		</dependency>
 		<dependency>
-		<groupId>org.springframework.security</groupId>
+			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
 		</dependency>
 		
 	</dependencies>
