--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -46,9 +46,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      # - name: Add application.yml to api
-      #   run: |
-      #     echo "${{ secrets.API_APPLICATION }}" > api/src/main/resources/application.yml
+      - name: Add application.yml to api
+        run: |
+          cd api/src/main/resources &&
+          ls -la &&
+          cat application.yml
+          # echo "${{ secrets.API_APPLICATION }}" > api/src/main/resources/application.yml
 
       - name: Build Api Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.DOCKERHUB_REPOSITORY}}-api:latest ./api
