--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:postgresql://database:5432/journey_map
     username: admin
-    password: GJztpPT1Nl9V1P8r85KSl0J1CYi8
+    password: admin
     driver-class-name: org.postgresql.Driver
   sql:
     init:
