--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "react-zoom-pan-pinch": "^3.6.1"
   },
   "scripts": {
     "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
